php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #36721 The SoapServer is not able to send a header that it didn't receive.
Submitted: 2006-03-13 16:50 UTC Modified: 2006-03-21 13:06 UTC
Votes:1
Avg. Score:5.0 ± 0.0
Reproduced:1 of 1 (100.0%)
Same Version:1 (100.0%)
Same OS:1 (100.0%)
From: hjiverson at plauditdesign dot com Assigned: dmitry (profile)
Status: Closed Package: SOAP related
PHP Version: 5.1.3RC2 OS: N/A
Private report: No CVE-ID: None
 [2006-03-13 16:50 UTC] hjiverson at plauditdesign dot com
Description:
------------
The SoapServer is not able to send a header that it didn't receive, since receiving a header seems to be what invokes the magic function.

For example, I have a sessionId header. The client makes its first call and does not yet have a session initiated, and does not send the header. The server should be able to send a sessionId header, whether it received one or not.

Reproduce code:
---------------
http://pastebin.com/599820

Expected result:
----------------
The server should return the header with string "FROM SERVER: "

Actual result:
--------------
The server does not return any header unless one was sent.

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2006-03-13 19:52 UTC] tony2001@php.net
Please try using this CVS snapshot:

  http://snaps.php.net/php5.1-latest.tar.gz
 
For Windows:
 
  http://snaps.php.net/win32/php5.1-win32-latest.zip


 [2006-03-13 22:21 UTC] hjiverson at plauditdesign dot com
Tested with latest snapshot, same issue:

PHP 5.1.3RC2-dev (cli) (built: Mar 13 2006 20:18:23)
Copyright (c) 1997-2006 The PHP Group
Zend Engine v2.1.0, Copyright (c) 1998-2006 Zend Technologies
 [2006-03-21 13:06 UTC] dmitry@php.net
Fixed in CVS HEAD and PHP_5_1.

See ext/soap/tests/server023.phpt, ext/soap/tests/server024.phpt and ext/soap/tests/server025.phpt for more details.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Mon Sep 28 10:00:01 2026 UTC