Fixed bug #36721 (The SoapServer is not able to send a header that it didn't receive)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_1@209800 c90b9560-bf6c-de11-be94-00142212c4b1